--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@article) do |f| %>
+<%= form_for @article, :html => { :multipart => true } do |f| %>
   <% if @article.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:</h2>
@@ -19,6 +19,15 @@
     <%= f.label :content %><br />
     <%= f.text_field :content %>
   </div>
+
+  <div class="paperclipStuff">
+    <%= f.fields_for :assets do |asset| %>
+      <div class="formRow">
+        <%= asset.file_field :image %>
+      </div>
+    <% end %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
