--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -35,6 +35,7 @@
         <div class="thumbnail">
           <%= link_to image_tag(asset.object.image.url(:thumb)),
                       asset.object.image.url(:original) %>
+          <%= asset.check_box :_destroy %>
         </div>
       <% end %>
     <% end %>
